--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ wadb/
 
 # Ignore reformer-wiki
 reformer-wiki/
+reformer-wiki-100k/
 
 # Word2Vec model files (specific to your project)
 wikitext103_word2vec.model.syn1neg.npy
