--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ wadb/
 reformer-wiki/
 reformer-wiki-100k/
 
+# Ignore model cache
+model_cache/
+
 # Word2Vec model files (specific to your project)
 wikitext103_word2vec.model.syn1neg.npy
 wikitext103_word2vec.model.wv.vectors.npy
